--- a/includes/css/styles.css
+++ b/includes/css/styles.css
@@ -18,8 +18,11 @@ Notes:	 Hand coded for Udemy.com
 #features {
   text-align: center;
 }
-#features {
+#features img {
   margin: 0 0 20px;
+}
+#inputMessage{
+  margin-bottom: 15px;
 }
 footer{
   background: #333;
@@ -41,6 +44,10 @@ boday {
 .well .page-header h1 {
   margin-top: 0;
 }
+ul.unstyled{
+  list-style: none;
+  padding: 0;
+}
 /* --------------------------------------
    Navbar
    -------------------------------------- */
@@ -55,32 +62,31 @@ boday {
 /* --------------------------------------
    Carousel
    -------------------------------------- */
-#myCarousel{
-   margin-top: 60px;
+#myCarousel {
+  margin-top: 60px;
 }
 
-.carousel-caption{
-   font-size:24px;
+.carousel-caption {
+  font-size: 24px;
 }
 
 .carousel-caption h4 {
-   font-size: 32px;
+  font-size: 32px;
 }
 
+#myCarousel .item { height: 400px; }
 
-#myCarousel .item{height:400px;} 
+#slide1 {
+  background: url('../../images/carousel_medium_01.jpg') top center no-repeat;
+}
 
-#slide1{
-   background:url('../../images/carousel_medium_01.jpg') top center no-repeat;
-   } 
+#slide2 {
+  background: url('../../images/carousel_medium_02.jpg') top center no-repeat;
+}
 
- #slide2{
-   background:url('../../images/carousel_medium_02.jpg') top center no-repeat;
-   } 
-
-#slide3{
-   background:url('../../images/carousel_medium_03.jpg') top center no-repeat;
-   }        
+#slide3 {
+  background: url('../../images/carousel_medium_03.jpg') top center no-repeat;
+}
 
 
 
@@ -88,6 +94,11 @@ boday {
 /* --------------------------------------
    Global Styles
    -------------------------------------- */
+
+
+.well{
+  margin: 20px 0;
+}
 .alert
 {
   margin:20px 0;
@@ -109,42 +120,48 @@ boday {
 	
 }
 
-/* Landscape phone to portrait tablet */
 @media (max-width: 768px) {
-  #myCarousel .item{height: 310px;}
-  slide1{
-   background:url('../../images/carousel_small_01.jpg') top center no-repeat;
-   } 
-
- #slide2{
-   background:url('../../images/carousel_small_02.jpg') top center no-repeat;
-   } 
-
-#slide3{
-   background:url('../../images/carousel_small_03.jpg') top center no-repeat;
-   }        
-.carousel-caption{
-  font-size: 16px;
-}
-.carousel-caption h4{
-  font-size: 22px;
-}
-	
+  
+  #myCarousel .item { height: 310px; }
+  
+  #slide1 {
+    background: url('../../images/carousel_small_01.jpg') top center no-repeat;
+  }
+  
+  #slide2 {
+    background: url('../../images/carousel_small_02.jpg') top center no-repeat;
+  }
+  
+  #slide3 {
+    background: url('../../images/carousel_small_03.jpg') top center no-repeat;
+  }
+  
+  .carousel-caption {
+    font-size: 16px;
+  }
+  
+  .carousel-caption h4 {
+    font-size: 22px;
+  }
+  
 }
 
 /* Large desktop */
 @media (min-width: 1200px) {
-  #myCarousel .item{height: 500px;}
-	slide1{
-   background:url('../../images/carousel_large_01.jpg') top center no-repeat;
-   } 
 
- #slide2{
-   background:url('../../images/carousel_large_02.jpg') top center no-repeat;
-   } 
-
-#slide3{
-   background:url('../../images/carousel_large_03.jpg') top center no-repeat;
-   }        
+  #myCarousel .item { height: 500px; }
+  
+  #slide1 {
+    background: url('../../images/carousel_large_01.jpg') top center no-repeat;
+  }
+  
+  #slide2 {
+    background: url('../../images/carousel_large_02.jpg') top center no-repeat;
+  }
+  
+  #slide3 {
+    background: url('../../images/carousel_large_03.jpg') top center no-repeat;
+  }
 
 }
+
